# spectral_symmetry

./: .gitignore  pyproject.toml  results_report.tex  ruff.toml
results/: detailed_results.csv  spectral_symmetry_report.tex  summary_table.md
scripts/: ablation_hdim_stratified.py  ablation_moltox21.py  analyze_canonicalizability.py  analyze_canonicalizability_molecules.py  analyze_canonicalization_experiments.py  analyze_modelnet40_spectrum.py  analyze_molpcba_results.py  compare_canonicalization.py  download_data.py  experiment_critique_moltox21.py  make_hks_report.py  make_latex.py  plot_moltox21_results.py  run_analysis.py  run_canonicalization_experiments.py  run_molpcba_experiments.py  run_spielman_sweep.py  spectral_audit.py  train_classifier.py  train_concat_hks.py  train_deep_sets.py  train_deep_sets_hks.py  train_deep_sets_learnable.py  train_deep_sets_pca.py  train_eigvec_sweep.py  train_gps.py  train_molecular.py  train_ptv3_gated_spectral.py  train_ptv3_pointcept.py  train_ptv3_spectral.py  train_ptv3_xyz.py  train_spectral_distance.py  train_spectral_node.py  train_spielman_node.py  train_spielman_spectral.py  train_xyz_baseline.py
src/: __init__.py  metrics.py  preprocessing.py  spectral_canonicalization.py  spectral_core.py  training.py
tests/: test_datasets.py  test_gps.py  test_map_oap.py  test_metrics.py  test_molecular.py  test_pca_canonicalize.py  test_pipeline.py  test_preprocessing.py  test_spectral_audit.py  test_spectral_canonicalization.py  test_spectral_core.py  test_spectral_transformer.py  test_training.py  test_uncanonicalizability.py  (+1 more)
(+51 files in other folders)
